2008-12-02  Marek Habersack  <mhabersack@novell.com>

	* DataRowExtensions.cs: when Field <T> is specialized on a
	nullable type (either a reference or an instance of Nullable <T>)
	do not throw exception for column value being DBNull but return
	null instead.

2008-08-15  Gert Driesen  <drieseng@users.sourceforge.net>

	* DataRowComparer_1.cs: Modified Equals to return true if all column
	values are equal. Modified ColumnsEqual to use Object.Equals for
	reference types. Fixes bug #417398.

2008-05-14  Atsushi Enomoto  <atsushi@ximian.com>

	* DataTableExtensions.cs :
	  implemented AsDataView() and CopyToDataTable().
	* EnumerableRowCollection.cs : added Table property for internal use.

2008-05-14  Atsushi Enomoto  <atsushi@ximian.com>

	* TypedTableBase.cs : serialization .ctor() does nothing here (it
	  might do something in derived types. no need to throw NIE here).

2008-05-14  Atsushi Enomoto  <atsushi@ximian.com>

	* EnumerableRowCollectionExtensions.cs,
	  OrderedEnumerableRowCollection.cs : implemented ThenBy().
	  It required some generic refactoring.

2008-05-13  Jb Evain  <jbevain@novell.com>

	* EnumerableRowCollection.cs: delete methods
	Select/Where/Cast that duplicate Linq to Objects
	methods.
	* EnumerableRowCollectionExtensions.cs
	TypedTableBase.cs, TypedTableBaseExtensions.cs: directly
	fallback to Linq to Objects.

2008-05-13  Atsushi Enomoto  <atsushi@ximian.com>

	* DataTableExtensions.cs, EnumerableRowCollection.cs,
	  EnumerableRowCollectionExtensions.cs, EnumerableRowCollection_1.cs,
	  OrderedEnumerableRowCollection.cs, TypedTableBase.cs,
	  TypedTableBaseExtensions.cs : lots of significant refactoring to
	  make collection/enumerable things unified.
	  Implemented OrderBy() and OrderByDescending().

2008-05-13  Marek Habersack  <mhabersack@novell.com>

	* DataRowComparer_1.cs: implemented GetHashCode and Equals.

2008-05-13  Atsushi Enomoto  <atsushi@ximian.com>

	* DataTableExtensions.cs : implemented AsEnumerable().