@@ -1,3 +1,8 @@
+2010-03-26  Miguel de Icaza  <miguel@novell.com>
+
+	* RowEnumerableDataReader.cs: Applied patch from Tony Fish fixing
+	bug #591397
+
 2008-12-02  Marek Habersack  <mhabersack@novell.com>
 
 	* DataRowExtensions.cs: when Field <T> is specialized on a
